--- a/latex/partie1.tex
+++ b/latex/partie1.tex
@@ -236,4 +236,4 @@ IzPack se base donc sur une telle librairie : NanoXML.
 
 Cette librairie n'est malheureusement plus mise à jour (la dernière mise à jour date de 2003) et possède un certains nombres de bugs.
 De plus, l'environnement java (JRE) possède depuis la version 1.4 une bibliothèque native pour gérer les XML.
-Se débarrasser de la dépendance à nanoXML et se reposer uniquement sur la JRE permettrait donc non seulement de rendre la gestion des XML plus sûre et robuste, mais également de diminuer la taille des installateurs générés.
+Se débarrasser de la dépendance à NanoXML et se reposer uniquement sur la JRE permettrait donc non seulement de rendre la gestion des XML plus sûre et robuste, mais également de diminuer la taille des installateurs générés.
