--- a/latex/conclusion.tex
+++ b/latex/conclusion.tex
@@ -13,4 +13,5 @@ De plus, nous participons désormais activement à l'évolution du projet.
 
 Il reste encore de nombreuse possibilités d'amélioration pour IzPack.
 La suppression de NanoXML en faisait partie.
+Nous travaillons actuellement sur d'autres améliorations pour améliorer la qualité de IzPack.
 
