--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -2,7 +2,7 @@ Dans le cadre de notre troisième année d'étude à l'Institut Supérieur d'Inf
 Ce projet porte sur IzPack, un logiciel open-source sous la fondation Codehaus.
 
 Le développement de logiciel prend de l'ampleur et nécessite de plus en plus de temps.
-Externaliser certaines logiques, certaines procédures dans des outils externes qui permettent de diminuer ce temps de développement devient alors intéressant.
+Externaliser certaines logiques et certaines procédures dans des outils externes qui permettent de diminuer ce temps de développement devient alors intéressant.
 Izpack rentre dans cette catégorie d'outils : en effet, il se charge de générer la partie installation de l'application.
 
 Cependant, IzPack est un logiciel à part entière et nécessite un investissement.
