--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -1,9 +1,9 @@
 Le projet étant open-source et actif, il évolue sans cesse. La partie sur laquelle nous avons travaillé est relativement stable mais son utilisation peut varier dans le code. Nous allons voir la portée de l'utilisation de NanoXML, comment il est utilisé et enfin la solution apportée.
 
 % -> Utilisation intensive de XML
-% -> Philosophie de nanoXml et de DOM differente
+% -> Philosophie de NanoXML et de DOM differente
 % -> -> DOM : Tout est noeud
-% -> -> NanoXml : Base sur les tags (elements)
+% -> -> NanoXML : Base sur les tags (elements)
 \section{Étude de NanoXML}
 Comme nous avons pu le voir, IzPack utilise intensément des fichiers XML pour la génération d'installations.
 En effet, les fichiers XML présentent l'avantage d'être lisible, écrivable à la main et traitables.
