--- a/latex/remerciement.tex
+++ b/latex/remerciement.tex
@@ -1,5 +1,5 @@
  % Avec un repo public (et bien référencé en plus), j'hésite à mettre les traditionnels remerciements délirants d'avant release...
 % Mais quand même, Kalafina roxx
 Nous tenons à remercier Julien Ponge pour son encadrement de qualité tout au long du projet et pour le temps qu'il nous a consacré.
-Nous remercions également les createurs de NanoXml, projet qui a accompagné IzPack pendant de nombreuses années.
+Nous remercions également les createurs de NanoXML, projet qui a accompagné IzPack pendant de nombreuses années.
 Enfin, nous remercions la fantastique communauté qui s'est construite autour d'IzPack et ses utilisateurs, sans qui ce projet ne serait sans doute pas ce qu'il est aujourd'hui.
